--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,9 +1,10 @@
+@layer tailwind-base, primevue, tailwind-utilities;
+
 @layer tailwind-base {
-  @tailwind base;
+    @tailwind base;
 }
 
 @layer tailwind-utilities {
-  @tailwind utilities;
-  @tailwind variants;
+    @tailwind components;
+    @tailwind utilities;
 }
-
